--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru"
+<html lang="ru">
 <head>
     <title> Солнечные батареи GreenCorp</title>
-    <link rel="stylesheet" href="main.css"
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
   <header>
@@ -13,17 +17,18 @@
        <button>Заказать</button>
     </div>
   </header>
-  <sectoin class="about">
-    <div class="about__info">
+  <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
+    <div class="about__info animate__animated animate__fadeInLeft animate__slow">
         <h1>Солнечные панели GreenRobotic</h1>
         <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-        <button>Узнать подробнее</button>
+        <button>Узнать подробнее <i class="fas fa-angle-right"></i></button>
     </div>
-    <div class="about__images">
+    <div class="about__images animate__animated animate__fadeInRight animate__slow">
         <img class="about__sun-image" src="img/sun.png">
         <img class="about__image" src="img/solar-panel.png">
     </div>
-  </sectoin>
+  </section>
   <section class="form">
     <div class="form__container">
         <h1> Оставьте свои контакты</h1>
@@ -32,10 +37,16 @@
             <div class="form__group">
                 <label for="name">Ваше имя</label>
                 <input type="text" placeholder="Введите имя" id="name">
+            </div>
+            <div class="form__group">    
                 <label for="email">Электронный адрес</label>
                 <input type="email" placeholder="***@yandex.ru" id="email">
+            </div>
+            <div class="form__group">   
                 <label for="phone">Номер телефона</label>
                 <input type="tel" placeholder="7 (999) 999-99-99" id="phone">
+            </div>
+            <div class="form__group">    
                 <label for="budget">Примерный бюджет</label>
                 <select id="budget">
                     <option>Выберите вариант</option>
@@ -49,28 +60,105 @@
         </form>
     </div>
   </section>
+  <section class="features">
+    <div class="cards">
+        <div class="card">
+            <div class="card__logo yellow">
+                <i class="fas fa-solar-panel"></i>
+            </div>
+            <h3>Уменьшите счета за электричество</h3>
+            <p>Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за электричество</p>
+        </div>
+        <div class="card">
+            <div class="card__logo red">
+                24/7
+            </div>
+            <h3>Мониторинг электроэнергии</h3>
+            <p>Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения</p>
+        </div>
+        <div class="card">
+            <div class="card__logo green">
+                <i class="fas fa-chart-line"></i>
+            </div>
+            <h3>Максимальная эффективность</h3>
+            <p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами</p>
+        </div>
+    </div>
+    <div class="features__border">
+        <div class="features__feedback">
+            <div class="features__feedback-left">
+                <h2>Нам доверяет 
+                    <br> 
+                    <div class="features__clients-count">5000+</div> счастливых клиентов
+                </h2>
+                <p>Мы помогли тысячам людей перейти на зеленую энергию. 
+                    <br> 
+                    После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании.</p>
+            </div>
+            <div class="features__feedback-right">
+                <div class="features__box features__saving-box">
+                    <h3>30 млн ₽</h3>
+                    <p>Помогаем экономить нашим клиентам ежемесячно</p>
+                </div>
+                <div class="features__box features__rate-box">
+                    <h3>4.7</h3>
+                    <p class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </p>
+                    <p>Средняя оценка наших клиентов</p>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+  </section> 
+  <section class="promo">
+    <div class="promo__image">
+    </div>
+    <div class="promo__right">
+        <div class="promo__text">
+            <h2>Зарядите свой дом</h2>
+            <p>Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна</p>
+            <p>Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии</p>
+            <div class="promo__button-wrap">
+                <button type="button">Заказать <i class="fas fa-chevron-right"></i></button>
+            </div>
+        </div>
+    </div>
+  </section>
   <footer>
     <div class="footer__container">
         <div class="footer__group">
             <h3>Позвонить нам:</h3>
             <div class="footer__links">
-                <a href="# tel:74959999999">+7 (495) 999-99-99</a>
+                <a href="tel:74959999999">+7 (495) 999-99-99</a>
             </div>
         </div>
         <div class="footer__group">
             <h3>Решения для дома:</h3>
             <div class="footer__links">
-                <a href="# Солнечные панели GreenRobotic, системы солнечных панелей GreenStation">Солнечные панели GreenRobotic, системы солнечных панелей GreenStation</a>
+                <a href="#"></href> Солнечные панели GreenRobotic</a>
+                <a href="#"> Системы солнечных панелей GreenStation</a>
             </div>
         </div>
         <div class="footer__group">
             <h3>Компания</h3>
             <div class="footer__links">
-                <a href="# Контакты, Вакансии, СМИ">Контакты, Вакансии, СМИ</a>
+                <a href="#">Контакты</a>
+                <a href="#">Вакансии</a>
+                <a href="#">СМИ</a>
             </div>
         </div>
     </div>
-    <div class="footer__copyright">GreenCorp Ⓒ 2021</div>
+    <div class="footer__copyright">
+        GreenCorp Ⓒ 2021
+    </div>
   </footer>
+  <script src = "js/canvas.js"></script>
+  <script src="js/animations.js"></script>
 </body>
 </html>
